# filite

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  sqlx-data.json
.github/workflows/: audit.yml  build.yml  check.yml  docker.yml  main.yml  tests.yml
migrations/: 20200802191502_users.sql  20200802191752_filite.sql
migrations/2019-10-07-174500_create_files/: down.sql  up.sql
migrations/2019-10-07-174501_create_links/: up.sql
migrations/2019-10-07-174502_create_texts/: down.sql  up.sql
migrations/2020-01-15-052544_add_highlight/: down.sql  up.sql
resources/: highlight.html  highlight.min.js  index.html  script.js  spectre-icons.min.css  spectre.min.css  style.css
resources/web/: .prettierrc.json  index.html  script.js  style.css
src/: auth.rs  config.rs  db.rs  globals.rs  handlers.rs  lib.rs  logger.rs  main.rs  models.rs  queries.rs  reject.rs  routes.rs  runtime.rs  schema.rs  setup.rs  tests.rs  util.rs
src/db/: mod.rs  models.rs  pool.rs
templates/: index.html
