[package]
name = "filite"
version = "0.3.0"
authors = ["Raphaël Thériault <raphael_theriault@outlook.com>"]
edition = "2018"
description = "A simple, light and standalone pastebin, URL shortener and file-sharing service"
homepage = "https://github.com/raftario/filite"
repository = "https://github.com/raftario/filite"
readme = "README.md"
keywords = [
    "file-sharing",
    "url-shortener",
    "pastebin",
]
license = "MIT"

[dependencies]
anyhow = "1.0.32"
askama = "0.10.3"
chrono = { version = "0.4.13", features = ["serde"] }
futures = "0.3.5"
rust-argon2 = "0.8.2"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
sqlx = { version = "0.4.0-beta.1", features = ["chrono", "macros", "migrate", "offline", "runtime-tokio", "sqlite"], default-features = false }
structopt = "0.3.16"
tokio = { version = "0.2.22", features = ["blocking", "fs", "rt-core"] }
tracing = "0.1.19"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.11"
warp = { version = "0.2.4", features = ["tls"], default-features = false }

[target.'cfg(not(any(target_os = "windows", target_os = "macos")))'.dependencies]
openssl = { version = "*", features = ["vendored"] }
