[package]
name = "filite"
version = "0.3.0"
authors = ["Raphaël Thériault <raphael_theriault@outlook.com>"]
edition = "2018"
description = "A simple, light and standalone pastebin, URL shortener and file-sharing service"
homepage = "https://github.com/raftario/filite"
repository = "https://github.com/raftario/filite"
readme = "README.md"
keywords = [
    "file-sharing",
    "url-shortener",
    "pastebin",
]
license = "MIT"

[dependencies]
anyhow = "1.0.32"
askama = "0.10.3"
base64 = "0.12.3"
bincode = "1.3.1"
bytes = "0.5.6"
chrono = { version = "0.4.18", features = ["serde"] }
futures = "0.3.5"
rand = "0.7.3"
rust-argon2 = "0.8.2"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
sled = "0.34.4"
structopt = "0.3.18"
tokio = { version = "0.2.22", features = ["blocking", "fs", "macros", "rt-threaded"] }
tracing = "0.1.19"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.12"
warp = { version = "0.2.5", features = ["tls"], default-features = false }
