[package]
name = "filite"
version = "0.3.0"
authors = ["Raphaël Thériault <raphael_theriault@outlook.com>"]
edition = "2018"
description = "A simple, light and standalone pastebin, URL shortener and file-sharing service"
homepage = "https://github.com/raftario/filite"
repository = "https://github.com/raftario/filite"
readme = "README.md"
keywords = [
    "file-sharing",
    "url-shortener",
    "pastebin"
]
license = "MIT"
build = "build.rs"

[dependencies]
actix-files = "0.2.1"
actix-identity = "0.2.1"
actix-rt = "1.0.0"
actix-multipart = "0.2.0"
actix-web = "2.0.0"
base64 = "0.11.0"
blake3 = "0.1.1"
chrono = "0.4.10"
dialoguer = "0.5.0"
diesel_migrations = "1.4.0"
dirs = "2.0.2"
dotenv = { version = "0.15.0", optional = true }
env_logger = "0.7.1"
futures = "0.3.1"
lazy_static = "1.4.0"
num_cpus = "1.11.1"
radix_fmt = "1.0.0"
rand = "0.7.3"
toml = "0.5.5"
[dependencies.diesel]
version = "1.4.6"
features = ["r2d2", "sqlite"]
[dependencies.libsqlite3-sys]
version = "0.16.0"
features = ["bundled"]
[dependencies.serde]
version = "1.0.104"
features = ["derive"]

[build-dependencies]
rand = "0.7.3"

[features]
default = []
dev = ["dotenv"]
